--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -9,87 +9,6 @@
     background-color: rgb(17, 17, 29);
 }
 
-.search_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 70px;
-    background-color: rgba(11, 11, 17, 0.5);
-    border-bottom: 1px solid rgb(48, 48, 75);
-    position: fixed;
-    top: 50px;
-    z-index: 1;
-    backdrop-filter: blur(5px);
-}
-
-.form {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 500px;
-    height: 50px;
-}
-
-.search_input {
-    width: 100%;
-    height: 40px;
-    border: 1px solid white;
-    border-bottom: 5px solid white;
-    border-radius: 5px;
-    background-color: rgba(11, 11, 17, 0.8);
-    color: white;
-    font-size: 1.1rem;
-    padding: 0 10px;
-    margin: 10px 0;
-    transition: transform 0.1s ease-in-out;
-}
-
-.search_input:focus {
-    outline: none;
-    border: 1px solid white;
-    transition: border 0.1s ease-in-out;
-}
-
-.search_btn {
-    width: 120px;
-    height: 40px;
-    border: 1px solid white;
-    border-bottom: 5px solid white;
-    border-radius: 5px;
-    background-color: rgb(20, 20, 32);
-    color: white;
-    font-size: 1.1rem;
-    cursor: pointer;
-    transition: transform 0.2s ease-in-out;
-    margin: 1rem;
-}
-
-.search_btn:hover {
-    background-color: white;
-    color: rgb(30, 30, 63);
-    transition: transform 0.2s ease-in-out;
-    transform: scale(1.1);
-}
-
-.games_filters {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 50px;
-    background-color: rgba(11, 11, 17, 0.5);
-    border-bottom: 1px solid rgb(48, 48, 75);
-    color: white;
-    position: fixed;
-    top: 120px;
-    z-index: 1;
-    backdrop-filter: blur(5px);
-}
-
 .games_container {
     display: flex;
     flex-direction: row;
@@ -97,7 +16,7 @@
     align-items: center;
     width: 100%;
     height: fit-content;
-    top: 220px;
+    top: 160px;
     position: absolute;
     background-color: rgb(17, 17, 29);
     padding: 1rem;
@@ -114,115 +33,18 @@
     padding: 1.5rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
-    background-color: rgb(26, 26, 43);
+    background-color: rgb(22, 22, 37);
     border-radius: 5px;
     justify-content: center;
     align-items: center;
-}
-
-.pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    background-color: rgba(11, 11, 17, 0.5);
-    color: white;
-    position: fixed;
-    top: 170px;
-    z-index: 1;
-    backdrop-filter: blur(5px);
-}
-
-.pagination_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 60px;
-    color: white;
-}
-
-.pagination_btns {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 70px;
-    color: white;
-    padding: 1rem;
-}
-
-.pagination_btn {
-    width: 40px;
-    height: 40px;
-    border: 1px solid white;
-    border-bottom: 5px solid white;
-    border-radius: 5px;
-    background-color: rgba(23, 23, 37, 0.8);
-    color: white;
-    font-size: 1.1rem;
-    cursor: pointer;
-    transition: transform 0.2s ease-in-out;
-    margin: 0.5rem;
-}
-
-.pagination_btn:hover {
-    background-color: white;
-    color: rgb(30, 30, 63);
-    transition: transform 0.2s ease-in-out;
-    transform: scale(1.1);
-}
-
-.pagination_btn_prev {
-    width: 60px;
-    height: 40px;
-    border: 1px solid white;
-    border-bottom: 5px solid white;
-    border-radius: 5px;
-    background-color: rgba(20, 20, 32, 0.8);
-    color: white;
-    font-size: 1.1rem;
-    cursor: pointer;
-    transition: transform 0.2s ease-in-out;
-    margin: 1rem;
-}
-
-.pagination_btn_next {
-    width: 60px;
-    height: 40px;
-    border: 1px solid white;
-    border-bottom: 5px solid white;
-    border-radius: 5px;
-    background-color: rgba(20, 20, 32, 0.8);
-    color: white;
-    font-size: 1.1rem;
-    cursor: pointer;
-    transition: transform 0.2s ease-in-out;
-    margin: 1rem;
-}
-
-.pagination_btn_prev:hover {
-    background-color: white;
-    color: rgb(30, 30, 63);
-    transition: transform 0.2s ease-in-out;
-    transform: scale(1.1);
-}
-
-.pagination_btn_next:hover {
-    background-color: white;
-    color: rgb(30, 30, 63);
-    transition: transform 0.2s ease-in-out;
-    transform: scale(1.1);
+    box-shadow: 0 0 30px 0 rgb(0 0 0 / 50%);
 }
 
 .games_filters {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
 }
 
 .order_filter {
