--- a/client/src/components/Error/Error.css
+++ b/client/src/components/Error/Error.css
@@ -2,4 +2,8 @@
     color: red;
     font-size: 1.5rem;
     font-weight: bold;
+    margin: 0;
+    padding: 0;
+    z-index: 1;
+    background-color: white;
 }
