--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -5,11 +5,19 @@
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background: url('../../assets/landingBg.jpg') no-repeat center center fixed;
-    background-color: rgb(30, 30, 60);
-    background-size: cover;
-    background-blend-mode: multiply;
-    background-color: rgba(30, 30, 60, 0.8);
+    z-index: 1;
+}
+
+#bg-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
 }
 
 .info-wrapper {
@@ -20,6 +28,7 @@
     text-align: center;
     margin: 0 20px;
     justify-content: center;
+    z-index: 2;
 }
 
 .landing_title {
@@ -48,7 +57,7 @@
     border: 1px solid white;
     border-bottom: 5px solid white;
     border-radius: 5px;
-    background-color: rgb(17, 17, 36);
+    background-color: rgba(24, 24, 24, 0.5);
     color: white;
     font-size: 1.5rem;
     cursor: pointer;
@@ -57,8 +66,8 @@
 
 .landing_btn:hover {
     background-color: white;
-    color: rgb(30, 30, 63);
+    color: rgb(24, 24, 24);
     transition: 0.2s linear;
     transform: scale(1.1);
-    border: 1px solid rgb(30, 30, 63);
+    border: 1px solid rgb(24, 24, 24);
 }
