--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -5,12 +5,11 @@
     justify-content: space-between;
     width: 100%;
     height: 50px;
-    background-color: rgba(11, 11, 17, 0.5);
-    color: white;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     position: fixed;
     z-index: 1;
     backdrop-filter: blur(5px);
-    border-bottom: 1px solid rgb(48, 48, 75);
 }
 
 .navbar_logo {
@@ -44,7 +43,7 @@
     list-style: none;
     margin: 0 10px;
     font-size: 1.1rem;
-    color: white;
+    /* color: white; */
 }
 
 .navbar_links ul li:hover {
@@ -61,6 +60,7 @@
 .link_logo {
     text-decoration: none;
     color: white;
+    text-shadow: rgba(0, 0, 0, 0.5);
     transition: all 0.3s ease;
     transform: scale(1);
 }
