--- a/client/src/components/Pagination/Pagination.css
+++ b/client/src/components/Pagination/Pagination.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: rgba(11, 11, 17, 0.5);
+    background-color: rgba(0, 0, 0, 0.1);
     color: white;
     position: fixed;
     top: 120px;
@@ -39,7 +39,7 @@
     border: 1px solid white;
     border-bottom: 5px solid white;
     border-radius: 5px;
-    background-color: rgba(23, 23, 37, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
     font-size: 1.1rem;
     cursor: pointer;
@@ -49,7 +49,7 @@
 
 .pagination_btn:hover {
     background-color: white;
-    color: rgb(30, 30, 63);
+    color: black;
     transition: transform 0.2s ease-in-out;
     transform: scale(1.1);
 }
@@ -60,7 +60,7 @@
     border: 1px solid white;
     border-bottom: 5px solid white;
     border-radius: 5px;
-    background-color: rgba(20, 20, 32, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
     font-size: 1.1rem;
     cursor: pointer;
@@ -74,7 +74,7 @@
     border: 1px solid white;
     border-bottom: 5px solid white;
     border-radius: 5px;
-    background-color: rgba(20, 20, 32, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
     font-size: 1.1rem;
     cursor: pointer;
@@ -84,14 +84,14 @@
 
 .pagination_btn_prev:hover {
     background-color: white;
-    color: rgb(30, 30, 63);
+    color: black;
     transition: transform 0.2s ease-in-out;
     transform: scale(1.1);
 }
 
 .pagination_btn_next:hover {
     background-color: white;
-    color: rgb(30, 30, 63);
+    color: black;
     transition: transform 0.2s ease-in-out;
     transform: scale(1.1);
 }
@@ -102,7 +102,7 @@
     border: 1px solid white;
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
-    color: rgb(30, 30, 63);
+    color: black;
     font-size: 1.1rem;
     cursor: pointer;
     transition: transform 0.2s ease-in-out;
