--- a/client/src/components/Searchbar/SearchBar.css
+++ b/client/src/components/Searchbar/SearchBar.css
@@ -5,8 +5,8 @@
     align-items: center;
     width: 100%;
     height: 70px;
-    background-color: rgba(11, 11, 17, 0.5);
-    border-bottom: 1px solid rgb(48, 48, 75);
+    background-color: rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     position: fixed;
     top: 50px;
     z-index: 1;
@@ -28,7 +28,7 @@
     border: 1px solid white;
     border-bottom: 5px solid white;
     border-radius: 5px;
-    background-color: rgba(11, 11, 17, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
     font-size: 1.1rem;
     padding: 0 10px;
@@ -48,7 +48,7 @@
     border: 1px solid white;
     border-bottom: 5px solid white;
     border-radius: 5px;
-    background-color: rgb(20, 20, 32);
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
     font-size: 1.1rem;
     cursor: pointer;
@@ -58,7 +58,7 @@
 
 .search_btn:hover {
     background-color: white;
-    color: rgb(30, 30, 63);
+    color: black;
     transition: transform 0.2s ease-in-out;
     transform: scale(1.1);
 }
