--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -71,3 +71,12 @@
     transform: scale(1.1);
     border: 1px solid rgb(24, 24, 24);
 }
+
+.btn_link {
+    text-decoration: none;
+    color: white;
+}
+
+.btn_link:hover {
+    color: rgb(24, 24, 24);
+}
