--- a/client/src/components/Searchbar/SearchBar.css
+++ b/client/src/components/Searchbar/SearchBar.css
@@ -62,3 +62,24 @@
     transition: transform 0.2s ease-in-out;
     transform: scale(1.1);
 }
+
+.reset_btn {
+    width: 120px;
+    height: 40px;
+    border: 1px solid white;
+    border-bottom: 5px solid white;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 0.8rem;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+    margin: 1rem;
+}
+
+.reset_btn:hover {
+    background-color: white;
+    color: black;
+    transition: transform 0.2s ease-in-out;
+    transform: scale(1.1);
+}
