--- a/client/src/components/GameCard/GameCard.css
+++ b/client/src/components/GameCard/GameCard.css
@@ -74,29 +74,53 @@
     margin-left: 0.5rem;
 }
 
-.delete_button {
-    position: absolute;
+.card_description_upper {
     display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    height: 50px;
+    color: white;
+    font-size: 1.5rem;
+    text-shadow: 0 0 2px white;
+    transition: border 0.1s ease-in-out;
+}
+
+.card_title {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
-    margin-left: 220px;
-    margin-top: 10px;
-    border-radius: 5px;
+    width: 100%;
+    height: 50px;
     color: white;
-    font-weight: bold;
-    font-size: 1.3rem;
-    background-color: rgba(255, 0, 0, 0.5);
-    border: 1px solid rgba(255, 0, 0, 0.5);
-    cursor: pointer;
-    transform: scale(0.8);
+    font-size: 1.5rem;
+    text-shadow: 0 0 2px white;
+    transition: border 0.1s ease-in-out;
+}
+
+.card_button {
+    margin-top: 15px;
+}
+
+.delete_button {
+    width: 35px;
+    height: 35px;
+    color: white;
+    border: 1px solid rgb(250, 50, 50);
+    border-radius: 3px;
+    background-color: rgba(253, 51, 51, 0.5);  
+    font-size: 1.5rem;
+    text-shadow: 0 0 2px white;
     transition: transform 0.2s ease-in-out;
+    margin-right: 0.5rem;
+    cursor: pointer;
+    transform: scale(1)
 }
 
 .delete_button:hover {
-    background-color: rgba(255, 0, 0, 0.7);
-    border: 1px solid rgba(255, 0, 0, 0.7);
+    background-color: rgba(255, 0, 0, 0.5);
+    border: 1px solid rgba(255, 0, 0, 0.5);
     color: white;
-    transform: scale(1);
+    transform: scale(1.1);
 }
