--- a/client/src/components/Error/Error.css
+++ b/client/src/components/Error/Error.css
@@ -1,9 +1,7 @@
 .error {
-    color: red;
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin: 0;
-    padding: 0;
-    z-index: 1;
-    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
