--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -9,7 +9,7 @@
     background-color: rgb(24, 24, 24);
 }
 
-.games_container {
+ .games_container {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -20,7 +20,7 @@
     position: absolute;
     background-color: rgb(26, 26, 26);
     padding: 1rem;
-}
+} 
 
 .games_list {
     display: grid;
@@ -78,4 +78,18 @@
 .info_pages {
     margin-left: 1rem;
     margin-right: 1rem;
+}
+
+.error {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.not_found {
+    width: 100%;
+    height: 100%;
+    color: white;
 }
